# kalshiweather

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
wedge/: __init__.py  cli.py  config.py  http.py
wedge/engine/: __init__.py  edge.py  kelly.py  scanner.py
wedge/kalshi/: __init__.py  client.py  models.py
wedge/output/: export.py  history.py  table.py
wedge/weather/: __init__.py  ecmwf.py  models.py  open_meteo.py
